changed images array

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     <app-hamster-card  
     *ngFor= "let i of [0, 1, 2, 3]" 
     [text]="postTexts[i]" 
-    [imgtext]="images[i]"
+    [imgtext]="images2[i]"
     ></app-hamster-card>
    
   </div>
