--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,9 +3,24 @@ header {
     background-color: white; 
 }
 
+
+
 .logo {
     height: 48px; 
     margin-top: 16px;
     margin-bottom: 16px; 
     margin-left: 80px; 
+}
+a {
+    height: 48px;
+    font-size: 24px;
+    margin-top: 20px;
+    margin-right: 16px;
+    float: right; 
+    color: #66B2F3; 
+    cursor: pointer; 
+
+        &:hover {
+            text-decoration: underline;
+        }
 }
