--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,9 @@
-<p *ngIf="fs.openLogin">login works!</p>
+<p *ngIf="fs.openLogin">Login</p>
 <input *ngIf="fs.openLogin" type="text" placeholder="Enter E-mail" name = email [(ngModel)]="email">
 <input *ngIf="fs.openLogin" type="password" placeholder="Enter password" name = password  [(ngModel)]="password">
 <input *ngIf="fs.openLogin" (click)="Authentication();" type="submit"> 
+<p *ngIf="fs.openLogin">REGISTER</p>
+<input *ngIf="fs.openLogin" type="text" placeholder="Enter E-mail" name = email [(ngModel)]="email">
+<input *ngIf="fs.openLogin" type="password" placeholder="Enter password" name = password  [(ngModel)]="password">
+<input *ngIf="fs.openLogin" (click)="Registration();" type="submit"> 
+
